==================================
Rilascio 1.70.16    del 14/02/2016
==================================

Spostata la libreria jsencrypt.js da /jsencrypt/bin/ a /rygeneral/ per evitare le policies di IIS 7 che non vogliono directory di nome "bin" (sic!).

Aggiunto il test di abilitazione dell'estensione sqlite3 in diagnostica.
Aggiunto il test di abilitazione delle estensioni SQL Server in diagnostica.

Gestito il provider mssql (usa le estensioni per SQL Server senza ODBC).

Perfezionato l'assegnmento degli _infosystem.relative.

Maestro: utilizzata la lista ryUnbound per i risultati.

Documenti JSON in uscita: gestite meglio le codifiche UTF8.

==================================
Rilascio 1.70.15    del 02/02/2016
==================================

Filibuster: aggiornato il meccanismo di sintesi vocale.

==================================
Rilascio 1.70.14    del 01/02/2016
==================================

Aggiunte funzioni diagnostiche all'installatore.

Implementato un editor di script basato su CodeMirror ma compatibile con Cambusa: rybox/ryscript.

==================================
Rilascio 1.70.13    del 17/01/2016
==================================

ryPaper (stampe): aggiunta la funzione "Dotted"; migliorata la resa PDF con le celle di tabella.

==================================
Rilascio 1.70.12    del 10/01/2016
==================================

Eliminata la necessità di definire l'utente SERVER per ricevere notifiche dal modulo pratiche.

Autenticazione LDAP.

Maestro: arricchito il preprocessore di macro con i nuovi comandi ZEROLEN, NOEMPTY, SETEMPTY, LENGTH, SUBSTR, RIGHT, DATETOSTR, TIMETOSTR, NUMTOSTR, STRTONUM, CONCAT.
Inoltre conserva le formule all'interno delle stringhe costanti ed è stato reso ricorsivo.

==================================
Rilascio 1.70.11    del 26/12/2015
==================================

Pratiche: invio di email anche in caso di cambio destinatario.

Frame MDI: scroll auto in caso di dialogbox troppo grandi.
