@@ -1,0 +1,27 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+<meta charset="utf-8" />
+<meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Informativa sulla privacy</title>
+</head>
+
+<body style="margin:20px;font-family:verdana,sans-serif;font-size:100%;line-height:200%;">
+
+<b>Premessa</b><br>
+Ai sensi dell'art. 13 del D.Lgs. n. 196/2003 - “Codice in materia di protezione dei dati personali”, 
+il “Titolare” del trattamento, è tenuto a fornirle informazioni in merito all'utilizzo dei suoi dati personali. <br>
+<br>
+
+<b>Finalità del trattamento</b><br>
+I dati richiesti hanno l'unico scopo di inviare un messaggio di posta elettronica al titolare del sito. <br>
+<br>
+
+<b>Modalità di trattamento dei dati</b><br>
+Indirizzo email e testo del messaggio non sono in alcun modo memorizzati nel sistema né comunicati a terzi. <br>
+<br>
+
+
+</body>
+</html>
