@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="<?php print $VOICELANG ?>">
+<html lang="it">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1" />
