@@ -38,7 +38,7 @@ $path_root=installationPATH();
 | BASE RELATIVA DA DEDURRE (O ASSEGNARE IN _cambusa.php) |
 /********************************************************/
 
-$relative_base="";
+$relative_base="#";
 
 /************************
 | PERCORSO APPLICATIONS |
@@ -119,7 +119,7 @@ if(is_file($path_customize."_cambusa.php")){
 | EVENTUALE AGGIUSTAMENTO BASE RELATIVA |
 ****************************************/
 
-if($relative_base==""){
+if($relative_base=="#"){
     $relative_base=preg_replace("@\w+://[^/]+@i", "", $url_base);
     if($relative_base==""){
         $relative_base="/";
